always add variance smoothing not onlywhen variance is zero

--- a/Practical2/Practical2_skeleton_ste.ipynb
+++ b/Practical2/Practical2_skeleton_ste.ipynb
@@ -145,11 +145,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ALPHA = 1.0 # for additive smoothing\n",
+    "EPSILON = 1e-6 # For variance smoothing\n",
     "\n",
     "# Distribution for continuous features\n",
     "class ContFeatureParam:\n",
@@ -159,7 +160,7 @@
     "        # The code below is just for compilation. \n",
     "        # You need to replace it by your own code.\n",
     "        self.mean = np.mean(X)\n",
-    "        self.variance = np.var(X) if np.var(X) > 1e-6 else 1e-6\n",
+    "        self.variance = np.var(X) + EPSILON # it's good practice to always add the smoothing\n",
     "\n",
     "    def get_log_probability(self, X_new):\n",
     "        # TODO: return the log of the density values for the input values X_new\n",
