add assertions before estimating probabilities

--- a/Practical2/Practical2_skeleton_ste.ipynb
+++ b/Practical2/Practical2_skeleton_ste.ipynb
@@ -159,6 +159,7 @@
     "        # so that it best describes the input data X\n",
     "        # The code below is just for compilation. \n",
     "        # You need to replace it by your own code.\n",
+    "        assert np.any(np.isfinite(X) & (X != np.floor(X))), \"Data is not continuos\"\n",
     "        self.mean = np.mean(X)\n",
     "        self.variance = np.var(X) + EPSILON # it's good practice to always add the smoothing\n",
     "\n",
@@ -176,6 +177,7 @@
     "        # so that it best describes the input data X\n",
     "        # The code below is just for compilation. \n",
     "        # You need to replace it by your own code.\n",
+    "        assert np.all((X == 1) | (X == 0)), \"Data is not binary\"\n",
     "        self.p = (np.sum(X) + ALPHA) / (len(X) + 2 * ALPHA)\n",
     "\n",
     "    def get_log_probability(self, X_new):\n",
@@ -197,6 +199,7 @@
     "        # so that it best describes the input data X\n",
     "        # The code below is just for compilation. \n",
     "        # You need to replace it by your own code.\n",
+    "        assert np.all(np.isfinite(X)) and np.all(X == np.floor(X)), \"Data is not categorical\"\n",
     "        counts = np.bincount(X, minlength=self._num_of_categories) + ALPHA\n",
     "        self.probs = counts / np.sum(counts)\n",
     "        \n",
