use scipy norm instead

--- a/Practical2/Practical2_skeleton_ste.ipynb
+++ b/Practical2/Practical2_skeleton_ste.ipynb
@@ -149,6 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.stats import norm, bernoulli, multinomial\n",
+    "\n",
     "ALPHA = 1.0 # for additive smoothing\n",
     "EPSILON = 1e-6 # For variance smoothing\n",
     "\n",
@@ -167,7 +169,8 @@
     "        # TODO: return the log of the density values for the input values X_new\n",
     "        # The code below is just for compilation. \n",
     "        # You need to replace it by your own code.\n",
-    "        log_prob = -0.5 * np.log(2 * np.pi * self.variance) - ((X_new - self.mean) ** 2) / (2 * self.variance)\n",
+    "        sigma = np.sqrt(self.variance)\n",
+    "        log_prob = norm.logpdf(X_new, loc=self.mean, scale=sigma)\n",
     "        return log_prob\n",
     "\n",
     "# Distribution for binary features\n",
