ensure usage of classes that we defined before

--- a/Practical2/Practical2_skeleton_ste.ipynb
+++ b/Practical2/Practical2_skeleton_ste.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,6 +164,7 @@
     "        assert np.any(np.isfinite(X) & (X != np.floor(X))), \"Data is not continuos\"\n",
     "        self.mean = np.mean(X)\n",
     "        self.variance = np.var(X) + EPSILON # it's good practice to always add the smoothing\n",
+    "        return self.mean, self.variance \n",
     "\n",
     "    def get_log_probability(self, X_new):\n",
     "        # TODO: return the log of the density values for the input values X_new\n",
@@ -182,6 +183,7 @@
     "        # You need to replace it by your own code.\n",
     "        assert np.all((X == 1) | (X == 0)), \"Data is not binary\"\n",
     "        self.p = (np.sum(X) + ALPHA) / (len(X) + 2 * ALPHA)\n",
+    "        return self.p\n",
     "\n",
     "    def get_log_probability(self, X_new):\n",
     "        # TODO: return the log of the probability values for the input values X_new\n",
@@ -205,6 +207,8 @@
     "        assert np.all(np.isfinite(X)) and np.all(X == np.floor(X)), \"Data is not categorical\"\n",
     "        counts = np.bincount(X, minlength=self._num_of_categories) + ALPHA\n",
     "        self.probs = counts / np.sum(counts)\n",
+    "        return self.probs\n",
+    "\n",
     "        \n",
     "    def get_log_probability(self, X_new):\n",
     "        # TODO: return the log of the probability values for the input values X_new\n",
@@ -319,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,71 +333,76 @@
     "    # Inputs:\n",
     "    #   feature_types: the array of the types of the features, e.g., feature_types=['b', 'r', 'c']\n",
     "    def __init__(self, feature_types=[]):\n",
-    "        # TODO: \n",
-    "        # The code below is just for compilation. \n",
-    "        # You need to replace it by your own code.\n",
     "        self.feature_types = feature_types\n",
-    "        self.class_priors = None\n",
-    "        self.class_feature_params = None\n",
+    "        self.classes_ = None  # Will be set during fit\n",
+    "        self.class_prior_log_probs = {}  # Log prior probabilities\n",
+    "        self.feature_params = {}  # Parameters for each class and feature\n",
     "\n",
-    "        \n",
     "    # The function uses the input data to estimate all the parameters of the NBC\n",
     "    def fit(self, X, y):\n",
-    "        # TODO: \n",
-    "        # The code below is just for compilation. \n",
-    "        # You need to replace it by your own code.\n",
-    "        self.classes = np.unique(y)\n",
-    "        self.class_priors = {}\n",
-    "        self.class_feature_params = {}\n",
+    "        self.classes_ = np.unique(y)\n",
+    "        N_classes = len(self.classes_)\n",
+    "        N_samples, N_features = X.shape\n",
     "\n",
-    "        for c in self.classes:\n",
-    "            X_c = X[y == c]\n",
-    "            self.class_priors[c] = X_c.shape[0] / X.shape[0]\n",
-    "            feature_params = []\n",
+    "        # Compute class prior probabilities with smoothing\n",
+    "        class_counts = {}\n",
+    "        total_count = len(y)\n",
+    "        for c in self.classes_:\n",
+    "            class_counts[c] = np.sum(y == c)\n",
+    "        self.class_prior_log_probs = {}\n",
+    "        for c in self.classes_:\n",
+    "            prior_prob = (class_counts[c] + ALPHA) / (total_count + N_classes * ALPHA)\n",
+    "            self.class_prior_log_probs[c] = np.log(prior_prob)\n",
     "\n",
-    "            for i, feature_type in enumerate(self.feature_types):\n",
+    "        # For each class, estimate the feature parameters\n",
+    "        self.feature_params = {}\n",
+    "        for c in self.classes_:\n",
+    "            indices = np.where(y == c)[0]\n",
+    "            X_c = X[indices]\n",
+    "            params_c = []\n",
+    "            for j, feature_type in enumerate(self.feature_types):\n",
+    "                X_cj = X_c[:, j]\n",
     "                if feature_type == 'b':\n",
-    "                    p = (np.sum(X_c[:, i]) + 1) / (X_c.shape[0] + 2)\n",
-    "                    feature_params.append(p)\n",
+    "                    param = BinFeatureParam()\n",
+    "                    param.estimate(X_cj)\n",
     "                elif feature_type == 'r':\n",
-    "                    mean = np.mean(X_c[:, i])\n",
-    "                    var = np.var(X_c[:, i]) if np.var(X_c[:, i]) > 1e-6 else 1e-6\n",
-    "                    feature_params.append((mean, var))\n",
+    "                    param = ContFeatureParam()\n",
+    "                    param.estimate(X_cj)\n",
     "                elif feature_type == 'c':\n",
-    "                    counts = np.bincount(X_c[:, i].astype(int), minlength=self.feature_types.count('c')) + 1\n",
-    "                    feature_params.append(counts / counts.sum())\n",
-    "\n",
-    "            self.class_feature_params[c] = feature_params\n",
-    "                \n",
+    "                    num_categories = int(np.max(X[:, j])) + 1  # Assuming categories are from 0 to M-1\n",
+    "                    param = CatFeatureParam(num_categories)\n",
+    "                    param.estimate(X_cj.astype(int))\n",
+    "                else:\n",
+    "                    raise ValueError(f\"Unknown feature type: {feature_type}\")\n",
+    "                params_c.append(param)\n",
+    "            self.feature_params[c] = params_c                \n",
     "                \n",
     "    # The function takes the data X as input, and predicts the class for the data\n",
+    "    # The function takes the data X as input, and predicts the class for the data\n",
     "    def predict(self, X):\n",
-    "        # TODO: \n",
-    "        # The code below is just for compilation. \n",
-    "        # You need to replace it by your own code.\n",
-    "        predictions = []\n",
-    "\n",
-    "        for x in X:\n",
-    "            log_probs = {}\n",
-    "\n",
-    "            for c in self.classes:\n",
-    "                log_prob = np.log(self.class_priors[c])\n",
-    "\n",
-    "                for i, feature_type in enumerate(self.feature_types):\n",
-    "                    if feature_type == 'b':\n",
-    "                        p = self.class_feature_params[c][i]\n",
-    "                        log_prob += np.log(p if x[i] == 1 else 1 - p)\n",
-    "                    elif feature_type == 'r':\n",
-    "                        mean, var = self.class_feature_params[c][i]\n",
-    "                        log_prob += -0.5 * np.log(2 * np.pi * var) - ((x[i] - mean) ** 2) / (2 * var)\n",
-    "                    elif feature_type == 'c':\n",
-    "                        log_prob += np.log(self.class_feature_params[c][i][int(x[i])])\n",
-    "\n",
-    "                log_probs[c] = log_prob\n",
-    "\n",
-    "            predictions.append(max(log_probs, key=log_probs.get))\n",
-    "\n",
-    "        return np.array(predictions)\n"
+    "        N_samples, N_features = X.shape\n",
+    "        log_probs = np.zeros((N_samples, len(self.classes_)))\n",
+    "        for idx_c, c in enumerate(self.classes_):\n",
+    "            log_prior = self.class_prior_log_probs[c]\n",
+    "            params_c = self.feature_params[c]\n",
+    "            log_likelihood = np.zeros(N_samples)\n",
+    "            for j, param in enumerate(params_c):\n",
+    "                X_j = X[:, j]\n",
+    "                feature_type = self.feature_types[j]\n",
+    "                if feature_type == 'b':\n",
+    "                    log_prob = param.get_log_probability(X_j)\n",
+    "                elif feature_type == 'r':\n",
+    "                    log_prob = param.get_log_probability(X_j)\n",
+    "                elif feature_type == 'c':\n",
+    "                    log_prob = param.get_log_probability(X_j.astype(int))\n",
+    "                else:\n",
+    "                    raise ValueError(f\"Unknown feature type: {feature_type}\")\n",
+    "                log_likelihood += log_prob\n",
+    "            # Total log probability for class c\n",
+    "            log_probs[:, idx_c] = log_prior + log_likelihood\n",
+    "        # Choose the class with the highest probability\n",
+    "        y_pred = self.classes_[np.argmax(log_probs, axis=1)]\n",
+    "        return y_pred\n"
    ]
   },
   {
@@ -407,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
